--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -110,8 +110,13 @@
   "ScreenOrder": [
     "MainMenu",
     "DisplayAndEditMenu",
-    "Pracownik_wyswietl",
+    "Pracownicy_wyswietl",
     "Gatunki_wyswietl",
+    "Spotkania_wyswietl",
+    "Zadania_wyswietl",
+    "Menedzerowie_wyswietl",
+    "Lokalizacje_wyswietl",
+    "Filmy_wyswietl",
     "Pracownik_wyswietl_szczegoly",
     "EdytujPracownika",
     "CreateMenu",
