--- a/filmoplaner_prototype/Src/DisplayAndEditMenu.fx.yaml
+++ b/filmoplaner_prototype/Src/DisplayAndEditMenu.fx.yaml
@@ -8,7 +8,7 @@ DisplayAndEditMenu As screen:
 
     Button3 As button:
         Height: =70
-        OnSelect: =Navigate(Pracownik_wyswietl)
+        OnSelect: =Navigate(Pracownicy_wyswietl)
         Size: =24
         Text: ="Pracownicy"
         Width: =640
@@ -26,6 +26,7 @@ DisplayAndEditMenu As screen:
 
     Button3_2 As button:
         Height: =70
+        OnSelect: =Navigate(Spotkania_wyswietl)
         Size: =24
         Text: ="Spotkania"
         Width: =640
@@ -34,6 +35,7 @@ DisplayAndEditMenu As screen:
 
     Button3_3 As button:
         Height: =70
+        OnSelect: =Navigate(Zadania_wyswietl)
         Size: =24
         Text: ="Zadania"
         Width: =640
@@ -42,6 +44,7 @@ DisplayAndEditMenu As screen:
 
     Button3_4 As button:
         Height: =70
+        OnSelect: =Navigate(Menedzerowie_wyswietl)
         Size: =24
         Text: ="Menedżerowie"
         Width: =640
@@ -50,6 +53,7 @@ DisplayAndEditMenu As screen:
 
     Button3_5 As button:
         Height: =70
+        OnSelect: =Navigate(Lokalizacje_wyswietl)
         Size: =24
         Text: ="Lokalizacje"
         Width: =640
@@ -58,6 +62,7 @@ DisplayAndEditMenu As screen:
 
     Button3_6 As button:
         Height: =70
+        OnSelect: =Navigate(Filmy_wyswietl)
         Size: =24
         Text: ="Filmy"
         Width: =640
@@ -90,6 +95,6 @@ DisplayAndEditMenu As screen:
         Text: |-
             ="Podpowiedź: po wyświetleniu listy możesz edytować jej poszczególne elementy!"
         Width: =640
-        Y: =1026
+        Y: =1006
         ZIndex: =11
 
