--- a/filmoplaner_prototype/Src/DisplayAndEditMenu.fx.yaml
+++ b/filmoplaner_prototype/Src/DisplayAndEditMenu.fx.yaml
@@ -8,7 +8,7 @@ DisplayAndEditMenu As screen:
 
     Button3 As button:
         Height: =70
-        OnSelect: =Navigate(Pracownicy_wyswietl)
+        OnSelect: =Navigate(Pracownicy_wyswietl2)
         Size: =24
         Text: ="Pracownicy"
         Width: =640
