--- a/filmoplaner_prototype/CanvasManifest.json
+++ b/filmoplaner_prototype/CanvasManifest.json
@@ -119,7 +119,17 @@
     "Filmy_wyswietl",
     "Pracownicy_wyswietl_szczegoly",
     "Spotkania_wyswietl_szczegoly",
+    "Zadania_wyswietl_szczegoly",
+    "Menedzerowie_wyswietl_szczegoly",
+    "Lokalizacje_wyswietl_szczegoly",
+    "Filmy_wyswietl_szczegoly",
     "EdytujPracownika",
+    "EdytujGatunek",
+    "EdytujSpotkanie",
+    "EdytujZadanie",
+    "EdytujMenedzera",
+    "EdytujLokalizacje",
+    "EdytujFilm",
     "CreateMenu",
     "Dodaj pracownika",
     "Dodaj gatunek",
