--- a/filmoplaner_prototype/Src/Menedzerowie_wyswietl_szczegoly.fx.yaml
+++ b/filmoplaner_prototype/Src/Menedzerowie_wyswietl_szczegoly.fx.yaml
@@ -1,35 +1,34 @@
-Pracownicy_wyswietl_szczegoly As screen:
+Menedzerowie_wyswietl_szczegoly As screen:
     Fill: =RGBA(204, 231, 246, 1)
 
-    RectQuickActionBar5_13 As rectangle:
+    RectQuickActionBar5_15 As rectangle:
         Height: =106
         Width: =Parent.Width
         ZIndex: =1
 
-    FormViewer2_2 As formViewer:
-        AcceptsFocus: =false
-        DataSource: =Pracownik_1
+    FormViewer2_4 As formViewer:
+        DataSource: =Menedżer
         Height: =1029
-        Item: =BrowseGallery1_7.Selected
+        Item: =BrowseGallery1_4.Selected
         Width: =640
         Y: =106
         ZIndex: =2
 
-        Imię_DataCard2 As typedDataCard.textualViewCard:
+        "'imie _DataCard2' As typedDataCard.textualViewCard":
             BorderStyle: =BorderStyle.Solid
             DataField: ="Title"
-            Default: =ThisItem.Imię
+            Default: =ThisItem.'imie '
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"Title")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"Title")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
             Width: =640
             X: =0
             Y: =0
-            ZIndex: =1
+            ZIndex: =3
 
-            DataCardKey27 As label:
+            DataCardKey51 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -40,7 +39,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue26 As label:
+            DataCardValue50 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -49,16 +48,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey27.Y + DataCardKey27.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        Nazwisko_DataCard2 As typedDataCard.textualViewCard:
+        "'nazwisko _DataCard2' As typedDataCard.textualViewCard":
             BorderStyle: =BorderStyle.Solid
             DataField: ="field_2"
-            Default: =ThisItem.Nazwisko
+            Default: =ThisItem.'nazwisko '
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_2")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_2")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -67,7 +66,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =1
             ZIndex: =3
 
-            DataCardKey7 As label:
+            DataCardKey52 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -78,7 +77,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue7 As label:
+            DataCardValue51 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -87,16 +86,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey7.Y + DataCardKey7.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        "'Rola _DataCard2' As typedDataCard.textualViewCard":
+        numer_telefonu_DataCard2 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
-            DataField: ="field_5"
-            Default: =ThisItem.'Rola '
+            DataField: ="field_3"
+            Default: =ThisItem.numer_telefonu
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_5")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_3")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -105,7 +104,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =2
             ZIndex: =3
 
-            DataCardKey10 As label:
+            DataCardKey53 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -116,7 +115,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue10 As label:
+            DataCardValue52 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -125,16 +124,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey10.Y + DataCardKey10.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        "'Numer telefonu_DataCard2' As typedDataCard.textualViewCard":
+        email_DataCard2 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
-            DataField: ="field_7"
-            Default: =ThisItem.'Numer telefonu'
+            DataField: ="field_4"
+            Default: =ThisItem.email
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_7")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_4")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -143,7 +142,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =3
             ZIndex: =3
 
-            DataCardKey19 As label:
+            DataCardKey54 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -154,7 +153,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue19 As label:
+            DataCardValue53 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -163,16 +162,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey19.Y + DataCardKey19.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        "'Data Urodzenia_DataCard2' As typedDataCard.textualViewCard":
+        data_urodzenia_DataCard2 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
-            DataField: ="field_6"
-            Default: =ThisItem.'Data Urodzenia'
+            DataField: ="field_5"
+            Default: =ThisItem.data_urodzenia
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_6")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_5")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -181,7 +180,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =4
             ZIndex: =3
 
-            DataCardKey11 As label:
+            DataCardKey61 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -192,7 +191,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue11 As label:
+            DataCardValue60 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -201,16 +200,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey11.Y + DataCardKey11.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        "'Data Zatrudnienia_DataCard2' As typedDataCard.textualViewCard":
+        data_zatrudnienia_DataCard2 As typedDataCard.textualViewCard:
             BorderStyle: =BorderStyle.Solid
-            DataField: ="field_3"
-            Default: =ThisItem.'Data Zatrudnienia'
+            DataField: ="field_6"
+            Default: =ThisItem.data_zatrudnienia
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_3")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_6")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -219,7 +218,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =5
             ZIndex: =3
 
-            DataCardKey8 As label:
+            DataCardKey62 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -230,7 +229,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue8 As label:
+            DataCardValue61 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -239,16 +238,16 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey8.Y + DataCardKey8.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-        Wynagrodzenie_DataCard2 As typedDataCard.textualViewCard:
+        "'wynagrodzenie _DataCard2' As typedDataCard.textualViewCard":
             BorderStyle: =BorderStyle.Solid
-            DataField: ="field_4"
-            Default: =ThisItem.Wynagrodzenie
+            DataField: ="field_7"
+            Default: =ThisItem.'wynagrodzenie '
             DisplayMode: =DisplayMode.View
-            DisplayName: =DataSourceInfo([@Pracownik_1],DataSourceInfo.DisplayName,"field_4")
+            DisplayName: =DataSourceInfo([@Menedżer],DataSourceInfo.DisplayName,"field_7")
             Fill: =RGBA(0, 0, 0, 0)
             Height: =40
             Required: =false
@@ -257,7 +256,7 @@ Pracownicy_wyswietl_szczegoly As screen:
             Y: =6
             ZIndex: =3
 
-            DataCardKey9 As label:
+            DataCardKey63 As label:
                 AutoHeight: =true
                 Height: =48
                 Size: =21
@@ -268,7 +267,7 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Y: =10
                 ZIndex: =1
 
-            DataCardValue9 As label:
+            DataCardValue62 As label:
                 AutoHeight: =true
                 DisplayMode: =Parent.DisplayMode
                 PaddingLeft: =0
@@ -277,11 +276,11 @@ Pracownicy_wyswietl_szczegoly As screen:
                 Size: =21
                 Text: =Parent.Default
                 Width: =Parent.Width - 60
-                X: =30
-                Y: =DataCardKey9.Y + DataCardKey9.Height + 5
+                X: =60
+                Y: =58
                 ZIndex: =2
 
-    Icon1_20 As icon.Undo:
+    Icon1_22 As icon.Undo:
         Height: =71
         Icon: =Icon.Undo
         OnSelect: =Back()
@@ -290,14 +289,14 @@ Pracownicy_wyswietl_szczegoly As screen:
         Y: =17
         ZIndex: =3
 
-    Label5_2 As label:
+    Label5_4 As label:
         Align: =Align.Center
         Color: =RGBA(255, 255, 255, 1)
         FontWeight: =FontWeight.Semibold
         Height: =106
         Size: =30
         Text: |-
-            ="Pracownik:"
+            ="Menedżer:"
         Width: =560
         ZIndex: =4
 
